objects/AIA_Document__c.object
<CustomObject>
    <fields>
        <fullName>AIA_Approval_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US:750 
To check the record is submitted for approval.</description>
        <label>AIA Approval Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIA_Current_BDD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To identify latest/recent approved BDD for NAGES Report</description>
        <label>Current BDD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIA_Current_Benefit_Design_Document__c</fullName>
        <formula>IF( AIA_Current_BDD__c = TRUE, FileNet_URL__c , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reporting only field and will not be added to the layout</inlineHelpText>
        <label>Current Benefit Design</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Address__c</fullName>
        <formula>Benefit_Request_Form__r.Account_Full_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Account_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>US171 Account Executive (Account Team)</description>
        <label>Account Executive (Account Team)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIA_Documents9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>Account__r.Account_Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Alias__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>File_Net_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adj_Summ_Revision__c</fullName>
        <label>Adj Summary Revision #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Approvals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_Account_Dedicated_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Approver - Account Dedicated Representative</inlineHelpText>
        <label>Approver - Account Dedicated Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIA_Documents8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Billing_Tech__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Billing Tech</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIA_Documents5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Customer_Support__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Customer Support</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIA_Documents1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Implementation_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Implementation Team</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIA_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Par_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - AIA User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIA_Documents3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_QA_Auditor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - QA Auditor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIA_Documents4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Sales_Service_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIA_Documents7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Settlements_Tech__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Settlements Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIA_Documents6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approver name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attachment_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attachment ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BAA_Customized_Email_Body__c</fullName>
        <formula>"Please Review and electronically sign the Business Associate Agreement by clicking the Review Document above. " &amp; BR()&amp; BR() &amp; "Thank You" &amp; BR() &amp;    submitter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BAA Customized Email Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BAA_External_user_Name__c</fullName>
        <formula>Implementation__r.DocuSign_Recipient_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BAA External user Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_DesignFormType__c</fullName>
        <formula>Benefit_Design_Form__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Benefit DesignFormType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Design_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Design Form</label>
        <referenceTo>AIA_Benefit_Design_Form__c</referenceTo>
        <relationshipLabel>AIA Documents</relationshipLabel>
        <relationshipName>AIA_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit_Design_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Design Product</label>
        <referenceTo>AIA_Benefit_Design_Product__c</referenceTo>
        <relationshipLabel>AIA Documents</relationshipLabel>
        <relationshipName>AIA_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit_Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Design</label>
        <referenceTo>AIA_Benefit_Design__c</referenceTo>
        <relationshipLabel>AIA Documents</relationshipLabel>
        <relationshipName>AIA_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Request Form</label>
        <referenceTo>Benfit_Request_Form__c</referenceTo>
        <relationshipName>File_Net_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>AIA Documents</relationshipLabel>
        <relationshipName>AIA_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Benefit Request Form</fullName>
                </value>
                <value>
                    <fullName>Proposal Request Form</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Benefit Design</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Proposed Product</fullName>
                </value>
                <value>
                    <fullName>Workplan Assignment</fullName>
                </value>
                <value>
                    <fullName>Benefit Design Product</fullName>
                </value>
                <value>
                    <fullName>Benefit Design Form</fullName>
                </value>
                <value>
                    <fullName>Group Structure Request Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claims_Settlement_Process_Setup_Update__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Claims Settlement Process Setup / Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ClonedFromAIADocID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ClonedFromAIADocID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClonedFromAIADocName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ClonedFromAIADocName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>AIA Documents</relationshipLabel>
        <relationshipName>AIA_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Setup</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Corporate Communications</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Quality and Training</fullName>
                </value>
                <value>
                    <fullName>Enrollment &amp; Billing</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DocuSign_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuSign Status</label>
        <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
        <relationshipLabel>AIA Documents</relationshipLabel>
        <relationshipName>AIA_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Approval_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Document_Format__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Format</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_Status__c</fullName>
        <label>Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Acount Cancellation Termination and Transfer Request Form</fullName>
                    <label>Account Cancellation Termination and Transfer Request Form</label>
                </value>
                <value>
                    <fullName>Account Implementation Workplan (Internal)</fullName>
                </value>
                <value>
                    <fullName>Account Impmentation Milestone Workplan (External)</fullName>
                </value>
                <value>
                    <fullName>Account Kick-off</fullName>
                </value>
                <value>
                    <fullName>Account Review Committee</fullName>
                </value>
                <value>
                    <fullName>Additional Documentation</fullName>
                </value>
                <value>
                    <fullName>Administrative Service Agreement</fullName>
                </value>
                <value>
                    <fullName>Administrative Services Agreement (ASA)</fullName>
                </value>
                <value>
                    <fullName>AIA Account Issue Documentation</fullName>
                </value>
                <value>
                    <fullName>Benefit Design Document</fullName>
                </value>
                <value>
                    <fullName>Benefit EDC</fullName>
                </value>
                <value>
                    <fullName>Benefit Request Form</fullName>
                </value>
                <value>
                    <fullName>Benefits Contracts</fullName>
                </value>
                <value>
                    <fullName>Billing Information Form</fullName>
                </value>
                <value>
                    <fullName>BlueFund</fullName>
                </value>
                <value>
                    <fullName>BlueRewards Wellness</fullName>
                </value>
                <value>
                    <fullName>Business Associate Agreement (BAA)</fullName>
                </value>
                <value>
                    <fullName>Business Associate Confirmation (BAC)</fullName>
                </value>
                <value>
                    <fullName>CAG (Carrier Account Group)</fullName>
                </value>
                <value>
                    <fullName>Cede Document</fullName>
                </value>
                <value>
                    <fullName>Census Information</fullName>
                </value>
                <value>
                    <fullName>Client Letters</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Custom BAA</fullName>
                </value>
                <value>
                    <fullName>Custom Funding Letter</fullName>
                </value>
                <value>
                    <fullName>CVS Sales Support Request Form</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Department Notes</fullName>
                </value>
                <value>
                    <fullName>Department Number Notes</fullName>
                </value>
                <value>
                    <fullName>Enrollment Data Card (EDC)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_View__c</fullName>
        <formula>HYPERLINK('/servlet/servlet.FileDownload?file=' + Attachment_ID__c, 'View', '_blank')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_sent_to_FileNet__c</fullName>
        <formula>AND(Filenet_GUID__c &lt;&gt; '')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document_sent_to_FileNet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Docusign_Recipient_user_email__c</fullName>
        <formula>IF( Text(Document_Type__c)=='Custom BAA' , Implementation__r.DocuSign_Recipient_Email__c  ,'')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Docusign Recipient user email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docusign_Sender__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Docusign Sender</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Docusign_Submitter_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Docusign Submitter Email</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docusign_Submitter_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Docusign Submitter Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docusign_send_user_name__c</fullName>
        <formula>IF( Text(Document_Type__c)=='Custom BAA' ,Implementation__r.DocuSign_Recipient_Name__c  ,'')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Docusign Recipient user name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FileNet_URL1__c</fullName>
        <description>This URL field will be populated by FileNet integration.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FileNet URL1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FileNet_URL__c</fullName>
        <description>Shows message if URL is blank else will populate the URL in the UI</description>
        <formula>IF(ISBLANK(Filenet_GUID__c),'Document pending to be sent to FileNet', HYPERLINK($Setup.AIA_Base_URL__c.AIA_FileNet_Base_URL__c+Filenet_GUID__c,'Click Here'))</formula>
        <label>FileNet URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filenet_GUID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Filenet GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generated_By__c</fullName>
        <description>field to indicate if the document is generated by informatica cloud or drawloop or a business/admin user. created as part of bd package stories.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Generated By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Structure_Document_Approval_Stage__c</fullName>
        <label>Group Structure Document Approval Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Approval</fullName>
                    <default>true</default>
                    <label>In Approval</label>
                </value>
                <value>
                    <fullName>Step 6-New Business - Account Implementation</fullName>
                </value>
                <value>
                    <fullName>Step 7-Existing Business - Sales / Service Rep</fullName>
                </value>
                <value>
                    <fullName>Step 7-Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Structure_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Structure Request Form</label>
        <referenceTo>AIA_Group_Structure_Request_Form__c</referenceTo>
        <relationshipLabel>AIA Documents</relationshipLabel>
        <relationshipName>AIA_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Historical_Benefit_Design_Document__c</fullName>
        <formula>IF( AIA_Current_BDD__c  = FALSE, FileNet_URL__c  , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reporting only field and will not be added to the layout</inlineHelpText>
        <label>Historical Benefit Design</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Account__c</fullName>
        <formula>Account__r.House_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>House Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation</label>
        <referenceTo>AIA_Implementation__c</referenceTo>
        <relationshipLabel>AIA Documents</relationshipLabel>
        <relationshipName>AIA_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Settlement_Analyst_filled__c</fullName>
        <formula>if( ISBLANK(Approver_Settlements_Tech__c ),false,true)</formula>
        <label>Is Settlement Analyst filled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_sent_for_BAA_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is sent for BAA Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LGIT_Tech__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MAST Tech</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIA_Documents2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mock_ID_Par_Plan_Review_reqd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mock ID AIA User Review reqd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>File_Net_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRF_Owner_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PRF Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Plan_Year__c</fullName>
        <formula>IF(ISBLANK(YEAR(Opportunity__r.Plan_Year_Effective_Date__c)),TEXT(YEAR(TODAY())), TEXT(YEAR(Opportunity__r.Plan_Year_Effective_Date__c)) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal Request Form</label>
        <referenceTo>PRF__c</referenceTo>
        <relationshipName>File_Net_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Products__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposed Products</label>
        <referenceTo>Proposed_Products__c</referenceTo>
        <relationshipName>File_Net_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ready_for_Filenet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checkbox used by informatica cloud to pick only documents which are approved in salesforce &amp; then send to filenet</description>
        <inlineHelpText>checkbox used by informatica cloud to pick only documents which are approved in salesforce &amp; then send to filenet</inlineHelpText>
        <label>Ready for Filenet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Request__c</fullName>
        <formula>TEXT((Benefit_Request_Form__r.Zip_Code_Validation__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason for Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_User_email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales User email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Seg_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Seg ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>PRF</fullName>
                </value>
                <value>
                    <fullName>Workplan Assignment</fullName>
                </value>
                <value>
                    <fullName>Benefit Request Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Department__c</fullName>
        <label>Sub Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Implementation Workplan (Internal)</fullName>
                </value>
                <value>
                    <fullName>Account Impmentation Milestone Workplan (External)</fullName>
                </value>
                <value>
                    <fullName>Account Kick-off</fullName>
                </value>
                <value>
                    <fullName>Acount Cancellation Termination and Transfer Request Form</fullName>
                </value>
                <value>
                    <fullName>Enrollment Data Card (EDC)</fullName>
                </value>
                <value>
                    <fullName>Group Structures</fullName>
                </value>
                <value>
                    <fullName>Miscillaneous Correspondence</fullName>
                </value>
                <value>
                    <fullName>New Group Benefit Change Worksheet (NGBCW)</fullName>
                </value>
                <value>
                    <fullName>Supplemental Worksheet for NGBCW</fullName>
                </value>
                <value>
                    <fullName>Account Review Committee</fullName>
                </value>
                <value>
                    <fullName>Benefit Design Form</fullName>
                </value>
                <value>
                    <fullName>Benefit Request Form</fullName>
                </value>
                <value>
                    <fullName>BlueFund</fullName>
                </value>
                <value>
                    <fullName>BlueRewards Wellness</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Other Ancillary (LTD, STD, Etc)</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Administrative Services Agreement (ASA)</fullName>
                </value>
                <value>
                    <fullName>Benefits Contracts</fullName>
                </value>
                <value>
                    <fullName>Business Associate Agreement (BAA)</fullName>
                </value>
                <value>
                    <fullName>Business Associate Confirmation (BAC)</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Group Contract Application</fullName>
                </value>
                <value>
                    <fullName>Performance Guarantee Agreements</fullName>
                </value>
                <value>
                    <fullName>Cede Requests</fullName>
                </value>
                <value>
                    <fullName>RFP Requests</fullName>
                </value>
                <value>
                    <fullName>RFP Responses</fullName>
                </value>
                <value>
                    <fullName>Sales Data Analyst Request Form</fullName>
                </value>
                <value>
                    <fullName>Census</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tax ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Pharmacy_Operations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team-Pharmacy Operations</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIA_DocumentsBvOI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Vision_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team - Vision Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIA_DocumentsBvO8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workplan_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workplan Assignment</label>
        <referenceTo>AIA_Workplan_Assignment__c</referenceTo>
        <relationshipName>File_Net_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>